@@ -1,5 +1,10 @@
 2007-10-28 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * lib/fantasdic/sources/edict_file.rb: Fixed bug with gzip-compressed files
+    that are encoded in EUC-JP.
+
+2007-10-28 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * lib/fantasdic/sources/edict_file.rb: Fixed typo.
 
 2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>
